attempting to fix scroll bar visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ body {
   line-height: var(--lineHeight-5);
   overflow: hidden;
   height: 300vh;
-  padding-top: 140px;
+  padding-top: 200px;
 }
 
 body.loaded { overflow: overlay; }
@@ -603,7 +603,7 @@ body.nav-active { overflow: hidden; }
 
 .header {
   position: fixed;
-  top: 0;
+  top: 80px;
   left: 0;
   width: 100%;
   background-color: var(--eerie-black-4);
@@ -1486,7 +1486,7 @@ textarea.input-field {
     width: 100%;
     padding-block: 10px;
     border-block-end: 1px solid var(--white-alpha-20);
-    z-index: 4;
+    z-index: 5;
     transition: var(--transition-1);
 
     background-color: var(--smoky-black-1);
@@ -2530,6 +2530,8 @@ textarea.input-field {
   border-bottom: 1px solid var(--gold-crayola);
   font-family: 'Forum', serif;
   font-size: 14px;
+  position: relative;
+  z-index: 10;
 }
 
 .scroll-banner p {
